# serializer version: 1
# name: TestResponsesCount.test_responses_count
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-01-21 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_created
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-04-25 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_started
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-04-25 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_survey"
  WHERE (NOT "posthog_survey"."archived"
         AND "posthog_survey"."end_date" IS NULL
         AND "posthog_survey"."start_date" IS NOT NULL
         AND "posthog_survey"."team_id" = 2
         AND NOT ("posthog_survey"."type" = 'api'))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.1
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.2
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.3
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.4
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_survey"
  WHERE (NOT "posthog_survey"."archived"
         AND "posthog_survey"."end_date" IS NULL
         AND "posthog_survey"."start_date" IS NOT NULL
         AND "posthog_survey"."team_id" = 2
         AND NOT ("posthog_survey"."type" = 'api'))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.5
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.6
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.7
  '''
  SELECT "posthog_survey"."id",
         "posthog_survey"."team_id",
         "posthog_survey"."name",
         "posthog_survey"."description",
         "posthog_survey"."linked_flag_id",
         "posthog_survey"."targeting_flag_id",
         "posthog_survey"."internal_targeting_flag_id",
         "posthog_survey"."type",
         "posthog_survey"."conditions",
         "posthog_survey"."questions",
         "posthog_survey"."appearance",
         "posthog_survey"."created_at",
         "posthog_survey"."created_by_id",
         "posthog_survey"."start_date",
         "posthog_survey"."end_date",
         "posthog_survey"."updated_at",
         "posthog_survey"."archived",
         "posthog_survey"."responses_limit",
         "posthog_survey"."iteration_count",
         "posthog_survey"."iteration_frequency_days",
         "posthog_survey"."iteration_start_dates",
         "posthog_survey"."current_iteration",
         "posthog_survey"."current_iteration_start_date",
         "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         T4."id",
         T4."key",
         T4."name",
         T4."filters",
         T4."rollout_percentage",
         T4."team_id",
         T4."created_by_id",
         T4."created_at",
         T4."deleted",
         T4."active",
         T4."rollback_conditions",
         T4."performed_rollback",
         T4."ensure_experience_continuity",
         T4."usage_dashboard_id",
         T4."has_enriched_analytics",
         T5."id",
         T5."key",
         T5."name",
         T5."filters",
         T5."rollout_percentage",
         T5."team_id",
         T5."created_by_id",
         T5."created_at",
         T5."deleted",
         T5."active",
         T5."rollback_conditions",
         T5."performed_rollback",
         T5."ensure_experience_continuity",
         T5."usage_dashboard_id",
         T5."has_enriched_analytics"
  FROM "posthog_survey"
  LEFT OUTER JOIN "posthog_featureflag" ON ("posthog_survey"."linked_flag_id" = "posthog_featureflag"."id")
  LEFT OUTER JOIN "posthog_featureflag" T4 ON ("posthog_survey"."targeting_flag_id" = T4."id")
  LEFT OUTER JOIN "posthog_featureflag" T5 ON ("posthog_survey"."internal_targeting_flag_id" = T5."id")
  WHERE ("posthog_survey"."team_id" = 2
         AND NOT ("posthog_survey"."archived"))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.8
  '''
  SELECT ("posthog_survey_actions"."survey_id") AS "_prefetch_related_val_survey_id",
         "posthog_action"."id",
         "posthog_action"."name",
         "posthog_action"."team_id",
         "posthog_action"."description",
         "posthog_action"."created_at",
         "posthog_action"."created_by_id",
         "posthog_action"."deleted",
         "posthog_action"."post_to_slack",
         "posthog_action"."slack_message_format",
         "posthog_action"."updated_at",
         "posthog_action"."bytecode",
         "posthog_action"."bytecode_error",
         "posthog_action"."steps_json",
         "posthog_action"."pinned_at",
         "posthog_action"."is_calculating",
         "posthog_action"."last_calculated_at"
  FROM "posthog_action"
  INNER JOIN "posthog_survey_actions" ON ("posthog_action"."id" = "posthog_survey_actions"."action_id")
  WHERE 'posthog_survey_actions'.'survey_id' IN ('00000000-0000-0000-0000-000000000000'::uuid,
                                                 '00000000-0000-0000-0000-000000000001'::uuid)
  '''
# ---
